--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "contentful": "^7.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-tap-event-plugin": "^3.0.3",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
